[package]
name = "valley-voice-mvp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "1"
time = { version = "0.3", features = ["serde", "formatting"] }
anyhow = "1.0.100"
